syntax = "proto3";
package pb;

import "rpc_get_product.proto";
import "product.proto";
import "google/api/annotations.proto";
option go_package = "product-service/pb";

service ProductService {
  rpc GetProducts(Empty) returns (GetAllProductsResponse) {
    option (google.api.http) = {
      get: "/v1/products"
    };
  }
}